[project]
name = "websocket-chat"
version = "0.1.0"
description = "WebSocket Chat"
authors = [
    {name = "Andrey",email = "Qwerty123Andrey@bk.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all] (>=0.115.12,<0.116.0)",
    "motor (>=3.7.0,<4.0.0)",
    "ipython (>=9.1.0,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
