[project]
name = "websocket-chat"
version = "0.1.0"
description = "WebSocket Chat"
authors = [
    {name = "Andrey",email = "Qwerty123Andrey@bk.ru"}
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = {extras = ["httpx"], version = "^0.115.12"}
motor = "^3.7.0"
ipython = "^9.1.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
faker = "^37.1.0"
punq = "^0.7.0"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
